assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;500;700&family=Spinnaker&display=swap');

:root {
    --heading-font: 'Jura', sans-serif;
    --standard-font: 'Spinnaker', sans-serif;
    --blue: #4285f4;
    --blue-hover: #3a76d6;
    --med-grey: #8a9cb4;
}

/* navbar and containers */
body {
    font-family: var(--standard-font);
}

.nav-link {
    padding: .7rem 1rem;
}

/* margins */
.mr-2 {
    margin-left: 2rem;
}

/* headings and fonts */
h1#main-heading {
    font-size: 4rem;
    line-height: 0.9;
    margin-top: 20px;
}

#tagline {
    font-size: 1.5rem;
}

.text-large {
    font-size: 1.2rem;
}

h1,
h2,
h3,
h4 {
    font-family: var(--heading-font);
    font-weight: 700;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

.map-section a {
    color: white;
}

.blue-text {
    color: var(--blue);
}

/* logos and icons */

#nav-logo {
    height: 50px;
    margin: 0 12px;
    float: left;
}

#logo {
    width: 90px;
    margin-top: 28px;
    margin-right: 5px;
}

.bottle {
    height: 60px;
    vertical-align: baseline;
    margin: 0 5px;
}

.nav-social-media-icon {
    font-size: 2rem;
    width: 40px;
    text-align: center;
}

.fab.fa-facebook-square {
    color: #3b5998;
}

.fab.fa-youtube-square {
    color: #c4302b;
}

.fab.fa-instagram-square {
    color: #f58529
}

.spin-icon {
    -webkit-transition: -webkit-transform 0.8s ease-in-out;
    transition: transform 0.8s ease-in-out;
}

.spin-icon:hover {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
}

.mobile-social-icons .nav-social-media-icon {
    font-size: 3rem;
    margin: 1rem;
}

.social-icons-wrapper {
    position: absolute;
    bottom: 15px;
    left: 0;
    width: 100%;
}

.mobile-social-icons .fab.fa-facebook-square,
.mobile-social-icons .fab.fa-youtube-square,
.mobile-social-icons .fab.fa-instagram-square {
    color: white;
}

/* buttons */

.btn-blue {
    background-color: var(--blue);
    color: white;
}

.btn {
    transition: all ease-in-out .3s;
    -webkit-box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.93);
    box-shadow: 0px 0px 0 0px rgba(0, 0, 0, 0.93);
}

.btn:hover {
    -webkit-box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.93);
    box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.93);
}

.btn-blue:hover {
    background-color: var(--blue-hover);
    color: white;
}

/* navbar */

#navbar-brand {
    font-family: var(--heading-font);
    font-size: 1.5rem;
    line-height: 1;
    width: 200px;
}

.navbar-nav {
    font-size: 1.2rem;
}

/* images */

#hero-home {
    background-image: url('../img/hero.jpg');
    background-position: center 80%;
    height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

#hero-about {
    background-image: url('../img/delphi.jpg');
    background-position: center center;
    height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.sea-bg {
    background-image: url('../img/sea.jpg');
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

#sea-overlay {
    height: 100%;
    background-color: rgba(150, 185, 241, 0.7);
    padding-bottom: 3rem;
}

.insta-row {
    text-align: center;
}

.insta-square {
    width: 85px;
    height: 85px;
    background-color: var(--med-grey);
    margin: 2px;
    display: inline-block;
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
}

#insta-pic-paphos {
    background-image: url('../img/paphos.jpg');
}

#insta-pic-mostar {
    background-image: url('../img/mostar.jpg');
}

#insta-pic-sofia {
    background-image: url('../img/sofia.jpg');
}

#insta-pic-dublin {
    background-image: url('../img/dublin.png');
    background-position: center 100%;
}

#insta-pic-warsaw {
    background-image: url('../img/warsaw.jpg');
    background-position: center 100%;
}

#insta-pic-polish-airlines {
    background-image: url('../img/polish-airlines.png');
}

#insta-pic-warsaw2 {
    background-image: url('../img/warsaw2.png');
}

#insta-pic-warsaw3 {
    background-image: url('../img/warsaw3.png');
}

#insta-pic-helsinki {
    background-image: url('../img/helsinki.png');
}

/* video iframe */

/* Code taken for responsive iframe from: https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */

.video-iframe-container {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%;
    /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
}

/* Map */

#map {
    height: 80vh;
}

/* About me page */

#about-me p {
    font-size: 1.3rem;
}

#about-me img {
    max-width: 100%;
    max-height: 100vh;
}

/* Footer */
#footer {
    background: var(--blue);
    text-align: center;
    padding: 30px;
    color: white;
    font-size: 1.1rem;
}

#footer a {
    color: white;
}

#footer hr {
    max-width: 400px;
    margin: 20px auto;
    border: 2px solid white;
}

#footer .nav-social-media-icon {
    display: inline-block;
    font-size: 3rem;
    width: 50px;
}

#footer ul {
    padding: 0;
}

/* Form */

label>span {
    color: red;
}

/* Media queries */

/* Mini devices (landscape phones, 400px and up) */
@media (min-width: 400px) {
    .insta-square {
        width: 110px;
        height: 110px;
    }
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
    .insta-square {
        width: 150px;
        height: 150px;
    }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .insta-square {
        width: 200px;
        height: 200px;
    }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .insta-square {
        width: 150px;
        height: 150px;
    }
}

/* X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

    h1#main-heading {
        font-size: 5rem;
        line-height: 0.9;
        margin-top: 20px;
    }

    #tagline {
        font-size: 2rem;
    }

    .text-large {
        font-size: 1.5rem;
    }

    #sea-bg,
    #sea-overlay {
        min-height: 100vh;
    }

    #sea-overlay {
        padding-top: 3%;
        /* Adjusts padding above the video to a responsive amount. */
    }

    .social-media-lead-xl-screens {
        margin-top: 7%;
    }
}

